updated notebooks with the figures

--- a/docs/gnn/0b-Select_frames_2D.ipynb
+++ b/docs/gnn/0b-Select_frames_2D.ipynb
@@ -26,13 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch_geometric.data import Data, Batch, DataLoader\n",
-    "import torch\n",
-    "import torch.nn.functional as functional\n",
     "import os\n",
     "import sys\n",
-    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as functional\n",
+    "from torch_geometric.data import Batch, Data, DataLoader\n",
+    "\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
     "\n",
     "script_path = os.path.realpath(os.path.dirname(__name__))\n",
@@ -42,6 +44,7 @@
     "sys.path.append(\"/workspace/collab-environment/collab_env/data/boids\")\n",
     "\n",
     "from utility import handle_discrete_data\n",
+    "\n",
     "from collab_env.data.boids.animal_simulation import visualize_graph"
    ]
   },
@@ -65,31 +68,34 @@
    "outputs": [],
    "source": [
     "import matplotlib.animation as animation\n",
-    "def visualize_graph(p, v, e = None,\n",
-    "                    extra_title = None,\n",
-    "                    batch = None,\n",
-    "                    starting_frame = 0,\n",
-    "                    file_id = 0,\n",
-    "                    model = None,\n",
-    "                    device = None):\n",
-    "    \"\"\"\n",
     "\n",
-    "    \"\"\"\n",
+    "\n",
+    "def visualize_graph(\n",
+    "    p,\n",
+    "    v,\n",
+    "    e=None,\n",
+    "    extra_title=None,\n",
+    "    batch=None,\n",
+    "    starting_frame=0,\n",
+    "    file_id=0,\n",
+    "    model=None,\n",
+    "    device=None,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
     "    model = model.to(device) if model else None\n",
     "\n",
     "    if batch is not None:\n",
     "        p, species = batch\n",
     "        p = p[file_id]\n",
     "\n",
-    "\n",
     "    p0 = p[starting_frame]\n",
     "    N = p0.shape[0]\n",
     "    print(\"p0 shape\", p0.shape)\n",
     "    print(\"p shape\", p.shape)\n",
-    "    colors = [\"C\"+str(n%10) for n in range(N)]\n",
+    "    colors = [\"C\" + str(n % 10) for n in range(N)]\n",
     "\n",
     "    # Create the figure and axes\n",
-    "    fig, axes = plt.subplots(2, 1, figsize=(5, 7), height_ratios = (3, 1))\n",
+    "    fig, axes = plt.subplots(2, 1, figsize=(5, 7), height_ratios=(3, 1))\n",
     "\n",
     "    # Set plot limits\n",
     "    ax = axes[0]\n",
@@ -99,40 +105,60 @@
     "\n",
     "    # Initialization function: plot the background of each frame\n",
     "    def init():\n",
-    "        ax.scatter(p0[:,0], p0[:,1],color = colors)\n",
+    "        ax.scatter(p0[:, 0], p0[:, 1], color=colors)\n",
     "        if e is not None:\n",
-    "            ax_extra.plot(e[0,:], color = 'k')\n",
+    "            ax_extra.plot(e[0, :], color=\"k\")\n",
     "        if v is not None:\n",
-    "            ax.quiver(p0[:,0], p0[:,1],\n",
-    "                    v[starting_frame,:,0] * 10, v[starting_frame,:,1] * 10,\n",
-    "                    color = colors, scale_units='xy', scale=1, alpha = 0.5)\n",
-    "        #ax.plot([pos[0]+vel[0],pos[0]+vel[0]],[pos[0]+vel[0],pos[0]+vel[0]])\n",
+    "            ax.quiver(\n",
+    "                p0[:, 0],\n",
+    "                p0[:, 1],\n",
+    "                v[starting_frame, :, 0] * 10,\n",
+    "                v[starting_frame, :, 1] * 10,\n",
+    "                color=colors,\n",
+    "                scale_units=\"xy\",\n",
+    "                scale=1,\n",
+    "                alpha=0.5,\n",
+    "            )\n",
+    "        # ax.plot([pos[0]+vel[0],pos[0]+vel[0]],[pos[0]+vel[0],pos[0]+vel[0]])\n",
     "\n",
     "    def animate(i):\n",
     "        ax.clear()\n",
     "        ax_extra.clear()\n",
     "        ax.set_xlim(0, 1)\n",
     "        ax.set_ylim(0, 1)\n",
-    "        ax.scatter(p[i,:,0],p[i,:,1], color = colors)\n",
+    "        ax.scatter(p[i, :, 0], p[i, :, 1], color=colors)\n",
     "        if e is not None:\n",
-    "            ax_extra.plot(e[:i,:], color = 'k')\n",
-    "            ax_extra.stem(i-1,e[i-1,0], markerfmt='ro')\n",
+    "            ax_extra.plot(e[:i, :], color=\"k\")\n",
+    "            ax_extra.stem(i - 1, e[i - 1, 0], markerfmt=\"ro\")\n",
     "        if v is not None:\n",
-    "            ax.quiver(p[i,:,0], p[i,:,1], v[i+1,:,0] * 10, v[i+1,:,1] * 10, scale_units='xy', scale=1)\n",
+    "            ax.quiver(\n",
+    "                p[i, :, 0],\n",
+    "                p[i, :, 1],\n",
+    "                v[i + 1, :, 0] * 10,\n",
+    "                v[i + 1, :, 1] * 10,\n",
+    "                scale_units=\"xy\",\n",
+    "                scale=1,\n",
+    "            )\n",
     "        ax.set_title(\"Frame\" + str(i))\n",
     "        if ax_extra is not None:\n",
     "            ax_extra.set_title(extra_title)\n",
     "            ax_extra.set_xlabel(\"frames\")\n",
-    "        \n",
     "\n",
-    "    ani = animation.FuncAnimation(fig, animate, init_func = init,\n",
-    "                              frames = np.arange(starting_frame + 1,p.shape[0]-1), interval=5,repeat = False, blit=False)\n",
+    "    ani = animation.FuncAnimation(\n",
+    "        fig,\n",
+    "        animate,\n",
+    "        init_func=init,\n",
+    "        frames=np.arange(starting_frame + 1, p.shape[0] - 1),\n",
+    "        interval=5,\n",
+    "        repeat=False,\n",
+    "        blit=False,\n",
+    "    )\n",
     "\n",
     "    # To save the animation as a GIF (requires ImageMagick or Pillow)\n",
-    "    #ani.save('flocking_test.gif', writer='imagemagick', fps=30)\n",
+    "    # ani.save('flocking_test.gif', writer='imagemagick', fps=30)\n",
     "\n",
     "    plt.show()\n",
-    "    return ani, ax\n"
+    "    return ani, ax"
    ]
   },
   {
@@ -151,13 +177,17 @@
     }
    ],
    "source": [
-    "file_name = 'boid_single_species_basic.pt'\n",
-    "config_name = 'boid_single_species_basic_config.pt'\n",
+    "file_name = \"boid_single_species_basic.pt\"\n",
+    "config_name = \"boid_single_species_basic_config.pt\"\n",
     "\n",
-    "dataset = torch.load(expand_path(\n",
-    "        \"simulated_data/runpod/\" + file_name, get_project_root()), weights_only = False)\n",
-    "species_configs = torch.load(expand_path(\n",
-    "        \"simulated_data/runpod/\" + config_name, get_project_root()), weights_only = False)\n",
+    "dataset = torch.load(\n",
+    "    expand_path(\"simulated_data/runpod/\" + file_name, get_project_root()),\n",
+    "    weights_only=False,\n",
+    ")\n",
+    "species_configs = torch.load(\n",
+    "    expand_path(\"simulated_data/runpod/\" + config_name, get_project_root()),\n",
+    "    weights_only=False,\n",
+    ")\n",
     "\n",
     "# create mini-batches\n",
     "batch_size = 1\n",
@@ -206,12 +236,14 @@
    "outputs": [],
    "source": [
     "# construct lazy model prediction error\n",
-    "actual = pos[:,1:]\n",
-    "predicted = pos[:,:-1] + vel[:,:-1]\n",
-    "loss = [functional.mse_loss(actual[:,f],predicted[:,f]) for f in range(actual.shape[1])]\n",
+    "actual = pos[:, 1:]\n",
+    "predicted = pos[:, :-1] + vel[:, :-1]\n",
+    "loss = [\n",
+    "    functional.mse_loss(actual[:, f], predicted[:, f]) for f in range(actual.shape[1])\n",
+    "]\n",
     "\n",
     "# polarity\n",
-    "polarity = torch.norm(torch.mean(vel[0],axis = 1), dim = 1)\n",
+    "polarity = torch.norm(torch.mean(vel[0], axis=1), dim=1)\n",
     "polarity_diff = torch.diff(polarity)"
    ]
   },
@@ -222,7 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extra_plot = np.hstack((polarity_diff.numpy().reshape((-1,1)), np.array(loss).reshape((-1,1))))"
+    "extra_plot = np.hstack(\n",
+    "    (polarity_diff.numpy().reshape((-1, 1)), np.array(loss).reshape((-1, 1)))\n",
+    ")"
    ]
   },
   {
@@ -267,11 +301,15 @@
    ],
    "source": [
     "%matplotlib widget\n",
-    "ani, ax = visualize_graph(pos[0], vel[0], extra_plot,\n",
-    "                extra_title = \"velocity polarization difference\",\n",
-    "                batch = None,\n",
-    "                starting_frame = 0,\n",
-    "                file_id = 1)"
+    "ani, ax = visualize_graph(\n",
+    "    pos[0],\n",
+    "    vel[0],\n",
+    "    extra_plot,\n",
+    "    extra_title=\"velocity polarization difference\",\n",
+    "    batch=None,\n",
+    "    starting_frame=0,\n",
+    "    file_id=1,\n",
+    ")"
    ]
   },
   {
@@ -282,7 +320,7 @@
    "outputs": [],
    "source": [
     "if save_file:\n",
-    "    ani.save('boid_boundary_long.gif', writer='pillow', fps=20)"
+    "    ani.save(\"boid_boundary_long.gif\", writer=\"pillow\", fps=20)"
    ]
   },
   {
@@ -330,11 +368,11 @@
     }
    ],
    "source": [
-    "# polarity \n",
+    "# polarity\n",
     "fig, ax = plt.subplots(figsize=(10, 4))\n",
-    "plt.plot(polarity, label = \"polarity\")\n",
-    "plt.plot(np.array(loss) * 100, label = \"lazy model loss\")\n",
-    "plt.plot(np.abs(polarity_diff), label = \"abs polarity change\")\n",
+    "plt.plot(polarity, label=\"polarity\")\n",
+    "plt.plot(np.array(loss) * 100, label=\"lazy model loss\")\n",
+    "plt.plot(np.abs(polarity_diff), label=\"abs polarity change\")\n",
     "mean = torch.mean(np.abs(polarity_diff))\n",
     "sd = torch.std(np.abs(polarity_diff))\n",
     "ax.axhline(mean + sd)\n",
