--- a/docs/gnn/ModelSelection.ipynb
+++ b/docs/gnn/ModelSelection.ipynb
@@ -43,12 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "from itertools import combinations\n",
     "from typing import Any\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pickle\n",
     "import torch\n",
     "import torch.nn.functional as functional\n",
     "from torch.utils.data import random_split\n",
@@ -59,18 +59,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1f3c4139-1a49-47c8-93f6-66e5ee00aa9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collab_env.gnn.gnn import get_adjcency_from_debug, plot_log_loss, train_rules_gnn, load_model, save_model, debug_result2prediction\n",
-    "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
-    "from collab_env.data.boids.animal_simulation import visualize_graph_2sets, static_visualize_2sets\n",
+    "from itertools import product\n",
     "\n",
-    "from collab_env.gnn.utility import dataset2testloader\n",
-    "from collab_env.gnn.plotting_utility import load_various_data, load_rollout\n",
-    "from itertools import product"
+    "from collab_env.data.boids.animal_simulation import (\n",
+    "    static_visualize_2sets,\n",
+    "    visualize_graph_2sets,\n",
+    ")\n",
+    "from collab_env.gnn.gnn import (\n",
+    "    debug_result2prediction,\n",
+    "    load_model,\n",
+    "    plot_log_loss,\n",
+    "    save_model,\n",
+    "    train_rules_gnn,\n",
+    ")\n",
+    "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
+    "from collab_env.gnn.plotting_utility import load_rollout, load_various_data\n",
+    "from collab_env.gnn.utility import dataset2testloader"
    ]
   },
   {
@@ -90,27 +99,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_names = ['boid_single_species_basic','boid_single_species_independent'] #'runpod/boid_single_species_basic']\n",
+    "data_names = [\n",
+    "    \"boid_single_species_basic\",\n",
+    "    \"boid_single_species_independent\",\n",
+    "]  #'runpod/boid_single_species_basic']\n",
     "\n",
     "data_names_short = {}\n",
-    "data_names_short['boid_single_species_independent'] = 'idpnt'\n",
-    "data_names_short['boid_single_species_basic'] = 'boid'\n",
-    "data_names_short['boid_food_basic'] = 'foodbasic'\n",
-    "data_names_short['boid_food_independent'] = 'foodidpnt'\n",
-    "data_names_short['boid_food_strong'] = 'foodstrong'\n",
+    "data_names_short[\"boid_single_species_independent\"] = \"idpnt\"\n",
+    "data_names_short[\"boid_single_species_basic\"] = \"boid\"\n",
+    "data_names_short[\"boid_food_basic\"] = \"foodbasic\"\n",
+    "data_names_short[\"boid_food_independent\"] = \"foodidpnt\"\n",
+    "data_names_short[\"boid_food_strong\"] = \"foodstrong\"\n",
     "\n",
-    "              #'boid_single_species_weak_alignment',\n",
-    "              #'boid_single_species_strong_alignment']#, 'boid_single_species_independent', # without food\n",
-    "              #'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
-    "              #'boid_food_strong'] # with food, strong influence\n",
+    "#'boid_single_species_weak_alignment',\n",
+    "#'boid_single_species_strong_alignment']#, 'boid_single_species_independent', # without food\n",
+    "#'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
+    "#'boid_food_strong'] # with food, strong influence\n",
     "\n",
     "model_names = [\"vpluspplus_a\"]\n",
-    "noise_levels = [0,0.005]\n",
+    "noise_levels = [0, 0.005]\n",
     "heads = [1]\n",
     "visual_ranges = [0.5]\n",
-    "seeds = [0,1,2,3,4]\n",
+    "seeds = [0, 1, 2, 3, 4]\n",
     "\n",
-    "all_combinations = list(product(data_names, model_names, noise_levels, heads, visual_ranges, seeds))\n"
+    "all_combinations = list(\n",
+    "    product(data_names, model_names, noise_levels, heads, visual_ranges, seeds)\n",
+    ")"
    ]
   },
   {
@@ -189,7 +203,7 @@
     }
    ],
    "source": [
-    "rollout_results =  {}\n",
+    "rollout_results = {}\n",
     "data = {}\n",
     "model_names = {}\n",
     "for ind in range(len(all_combinations)):\n",
@@ -204,20 +218,19 @@
     "        \"rollout_starting_frame\": 5,\n",
     "        \"noise\": n,\n",
     "        \"seed\": s,\n",
-    "        \"old_format\": True\n",
+    "        \"old_format\": True,\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    data_name_short = data_names_short[data_name]\n",
-    "    model_save_name = f'{data_name_short}_\\nn{n}_h{h}_vr{vr}_s{s}'\n",
+    "    model_save_name = f\"{data_name_short}_\\nn{n}_h{h}_vr{vr}_s{s}\"\n",
     "\n",
     "    try:\n",
-    "        \n",
-    "        rollout_results[ind] = load_rollout(\n",
-    "            \"vpluspplus_a\", **spec)\n",
+    "\n",
+    "        rollout_results[ind] = load_rollout(\"vpluspplus_a\", **spec)\n",
     "        model_names[ind] = model_save_name\n",
     "        print(f\"Successfully import {model_save_name}\")\n",
     "    except:\n",
-    "        print(f\"Cannot import {model_save_name}\")\n"
+    "        print(f\"Cannot import {model_save_name}\")"
    ]
   },
   {
@@ -228,7 +241,7 @@
    "outputs": [],
    "source": [
     "def sqr_diff(pred, actual):\n",
-    "    return np.sqrt(np.sum((pred - actual) ** 2, axis = 2))"
+    "    return np.sqrt(np.sum((pred - actual) ** 2, axis=2))"
    ]
   },
   {
@@ -239,17 +252,17 @@
    "outputs": [],
    "source": [
     "def return_mse(rollout_result, starting_frame, end_frame):\n",
-    "    \n",
-    "    F = len(rollout_result[0]['predicted']) #frames\n",
+    "\n",
+    "    F = len(rollout_result[0][\"predicted\"])  # frames\n",
     "    mse_by_frame = []\n",
     "    for f in range(starting_frame, end_frame):\n",
     "        Sqrdiff = []\n",
-    "        for b in [0,1]:#rollout_result:\n",
-    "            pred = rollout_result[b]['predicted'][f]\n",
-    "            actual = rollout_result[b]['actual'][f]\n",
+    "        for b in [0, 1]:  # rollout_result:\n",
+    "            pred = rollout_result[b][\"predicted\"][f]\n",
+    "            actual = rollout_result[b][\"actual\"][f]\n",
     "            Sqrdiff.append(sqr_diff(pred, actual))\n",
     "\n",
-    "        Sqrdiff = np.mean(np.concatenate(Sqrdiff, axis = 0))\n",
+    "        Sqrdiff = np.mean(np.concatenate(Sqrdiff, axis=0))\n",
     "        mse_by_frame.append(Sqrdiff)\n",
     "    return mse_by_frame"
    ]
@@ -304,11 +317,10 @@
     "starting_frame = 0\n",
     "end_frame = 80\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=2,\n",
-    "                         figsize=(10, 5))\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10, 5))\n",
     "\n",
     "mse_by_frame_all = []\n",
-    "mse_by_frame_all_dict = {} #fool-proof\n",
+    "mse_by_frame_all_dict = {}  # fool-proof\n",
     "\n",
     "for m in rollout_results:\n",
     "    if \"idpnt\" in model_names[m]:\n",
@@ -316,24 +328,24 @@
     "    else:\n",
     "        ax = axes[0]\n",
     "    if \"n0.005\" in model_names[m]:\n",
-    "        c = 'C1'\n",
+    "        c = \"C1\"\n",
     "    else:\n",
-    "        c = 'C0'\n",
+    "        c = \"C0\"\n",
     "    mse_by_frame = return_mse(rollout_results[m][0], starting_frame, end_frame)\n",
     "    mse_by_frame_all.append(mse_by_frame)\n",
     "    if mse_by_frame[60] <= 0.5:\n",
     "        label = model_names[m]\n",
     "    else:\n",
     "        label = None\n",
-    "    ax.plot(mse_by_frame, label = label, alpha = 0.4, color = c)\n",
+    "    ax.plot(mse_by_frame, label=label, alpha=0.4, color=c)\n",
     "    mse_by_frame_all_dict[m] = np.sum(mse_by_frame)\n",
     "\n",
     "for ax in axes:\n",
-    "    ax.set_ylim([-1,2])\n",
-    "    ax.set_xlabel('frames')\n",
-    "    ax.set_ylabel('MSE across samples and boids')\n",
+    "    ax.set_ylim([-1, 2])\n",
+    "    ax.set_xlabel(\"frames\")\n",
+    "    ax.set_ylabel(\"MSE across samples and boids\")\n",
     "\n",
-    "axes[0].legend(bbox_to_anchor=(0, -0.8), loc='lower left')\n",
+    "axes[0].legend(bbox_to_anchor=(0, -0.8), loc=\"lower left\")\n",
     "axes[0].set_title(\"Boid dataset\")\n",
     "axes[1].set_title(\"Independent dataset\")"
    ]
@@ -350,7 +362,7 @@
     "\n",
     "for m in rollout_results:\n",
     "    mse_ = np.log(mse_by_frame_all_dict[m])\n",
-    "    \n",
+    "\n",
     "    if \"n0.005\" in model_names[m]:\n",
     "        if \"boid\" in model_names[m]:\n",
     "            mse_noise_boid.append(mse_)\n",
@@ -415,28 +427,28 @@
    "source": [
     "# Create a DataFrame with groups of different lengths\n",
     "data = {\n",
-    "    'boid noise': mse_noise_boid,\n",
-    "    'boid no noise': mse_nonoise_boid,\n",
-    "    'idpnt noise': mse_noise_idpnt,\n",
-    "    'idpnt no noise': mse_nonoise_idpnt,\n",
+    "    \"boid noise\": mse_noise_boid,\n",
+    "    \"boid no noise\": mse_nonoise_boid,\n",
+    "    \"idpnt noise\": mse_noise_idpnt,\n",
+    "    \"idpnt no noise\": mse_nonoise_idpnt,\n",
     "}\n",
     "\n",
     "my_pal = {}\n",
-    "my_pal['boid noise'] = 'C2'\n",
-    "my_pal['boid no noise'] = 'C3'\n",
-    "my_pal['idpnt noise'] = 'C2'\n",
-    "my_pal['idpnt no noise'] = 'C3'\n",
+    "my_pal[\"boid noise\"] = \"C2\"\n",
+    "my_pal[\"boid no noise\"] = \"C3\"\n",
+    "my_pal[\"idpnt noise\"] = \"C2\"\n",
+    "my_pal[\"idpnt no noise\"] = \"C3\"\n",
     "\n",
     "# Convert to long-form for seaborn\n",
     "df_list = []\n",
     "for group, values in data.items():\n",
-    "    df_list.append(pd.DataFrame({'Value': values, 'Group': group}))\n",
+    "    df_list.append(pd.DataFrame({\"Value\": values, \"Group\": group}))\n",
     "df = pd.concat(df_list)\n",
     "\n",
     "# Create the violin plot\n",
     "plt.figure(figsize=(8, 6))\n",
-    "sns.violinplot(x='Group', y='Value', data=df, palette=my_pal)\n",
-    "plt.title('Noise helps stablize roll out. \\n log(MSE) \\n Without food')\n",
+    "sns.violinplot(x=\"Group\", y=\"Value\", data=df, palette=my_pal)\n",
+    "plt.title(\"Noise helps stablize roll out. \\n log(MSE) \\n Without food\")\n",
     "plt.show()"
    ]
   },
@@ -462,14 +474,14 @@
     "rollout_results_names = list(rollout_results.keys())\n",
     "\n",
     "# produce top model names:\n",
-    "indices = np.argsort(mse_by_frame_np[:,-1])[:20] #pick top 10\n",
+    "indices = np.argsort(mse_by_frame_np[:, -1])[:20]  # pick top 10\n",
     "top_names = [model_names[rollout_results_names[ind]] for ind in indices]\n",
     "print(\"top models:\", top_names)\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
     "# produce bad model names:\n",
-    "indices = np.argsort(mse_by_frame_np[:,-1])[-10:] #pick top 10\n",
+    "indices = np.argsort(mse_by_frame_np[:, -1])[-10:]  # pick top 10\n",
     "top_names = [model_names[rollout_results_names[ind]] for ind in indices]\n",
     "print(\"bottom models:\", top_names)"
    ]
