saving the sim file for vis.

--- a/docs/gnn/0c-Simulate_Boid_wFood_2D.ipynb
+++ b/docs/gnn/0c-Simulate_Boid_wFood_2D.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "smoke_test = \"CI\" in os.environ\n",
-    "save_file = True if not smoke_test else False\n",
+    "save_file = True \n",
     "\n",
     "steps = 1200 if not smoke_test else 10\n",
     "num_samples = 1000"
