--- a/figures/gnn/Z-tracked-data.ipynb
+++ b/figures/gnn/Z-tracked-data.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7c6d0aea",
    "metadata": {},
    "outputs": [
@@ -398,15 +398,15 @@
     "ALL_TRACKS_LIST = (\n",
     "    './data/tracks/from_processed/2023_11_05-session_0001/aligned_frames/thermal_2/thermal_2_tracks.csv',\n",
     "    './data/tracks/from_processed/2023_11_05-session_0002/aligned_frames/thermal_2/thermal_2_tracks.csv',\n",
-    "    './data/tracks/from_processed/2023_11_26-session_0001/aligned_frames/rgb_1/rgb_1_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2023_11_26-session_0001/aligned_frames/rgb_1/rgb_1_tracks.csv',\n",
     "    # './data/tracks/from_processed/2023_11_26-session_0001/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
-    "    './data/tracks/from_processed/2023_11_26-session_0002/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
-    "    './data/tracks/from_processed/2024_05_18-session_0002/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2023_11_26-session_0002/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2024_05_18-session_0002/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
     "    # './data/tracks/from_processed/2024_05_18-session_0003/aligned_frames/thermal_2/thermal_2_tracks.csv',\n",
-    "    './data/tracks/from_processed/2024_05_18-session_0003/aligned_frames/rgb_2/rgb_2_tracks.csv',\n",
-    "    './data/tracks/from_processed/2024_05_27-session_0006/aligned_frames/rgb_1/rgb_1_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2024_05_18-session_0003/aligned_frames/rgb_2/rgb_2_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2024_05_27-session_0006/aligned_frames/rgb_1/rgb_1_tracks.csv',\n",
     "    # './data/tracks/from_processed/2024_05_27-session_0006/aligned_frames/thermal_1/thermal_1_tracks.csv',\n",
-    "    './data/tracks/from_processed/2024_06_01-session_0003/aligned_frames/thermal_2/thermal_2_tracks.csv',\n",
+    "    # './data/tracks/from_processed/2024_06_01-session_0003/aligned_frames/thermal_2/thermal_2_tracks.csv',\n",
     ")\n",
     "\n",
     "# concatenate all tracks into a single dataframe:\n",
@@ -433,12 +433,10 @@
     "    )\n",
     "    \n",
     "    smoothed_dfs = []\n",
-    "    smoothing_window = 60\n",
-    "    subsample_rate = 10\n",
+    "    smoothing_window = 10\n",
     "    for track_id, df in tqdm(real_data.groupby('track_id')):\n",
     "        interpolated = regular_interpolate(df.set_index('frame'))\n",
     "        smoothed = interpolated.rolling(smoothing_window, center=True).mean().dropna().reset_index()\n",
-    "        smoothed = smoothed.iloc[::subsample_rate]\n",
     "        smoothed_dfs.append(smoothed)\n",
     "\n",
     "    smoothed_df = pd.concat(smoothed_dfs)\n",
