--- a/figures/gnn/appendix-rollout_perturb.ipynb
+++ b/figures/gnn/appendix-rollout_perturb.ipynb
@@ -694,7 +694,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -708,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
