--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d42ae68a",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,10 @@
     "\n",
     "        # Dynamically find the RGB and thermal MP4 files\n",
     "        rgb_dir = LOCAL_DOWNLOAD_DIR / f\"rgb_{camera}\"\n",
-    "        thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
+    "        if skip_thermal_extraction == True:\n",
+    "            thermal_dir = LOCAL_DOWNLOAD_DIR / f\"thermal_{camera}\"\n",
+    "        else:\n",
+    "            thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
     "\n",
     "        # Find the MP4 file in the RGB directory\n",
     "        rgb_video_files = list(rgb_dir.glob(\"*.MP4\")) + list(rgb_dir.glob(\"*.mp4\"))\n",
@@ -553,8 +556,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df76eab9",
+   "metadata": {},
+   "source": [
+    "This section should open a pop-up window. If you can't see it, it may have opened in the background. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2cd97256",
    "metadata": {},
    "outputs": [],
@@ -576,7 +587,10 @@
     "\n",
     "        # Dynamically find the RGB and thermal MP4 files\n",
     "        rgb_dir = LOCAL_DOWNLOAD_DIR / f\"rgb_{camera}\"\n",
-    "        thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
+    "        if skip_thermal_extraction == True:\n",
+    "            thermal_dir = LOCAL_DOWNLOAD_DIR / f\"thermal_{camera}\"\n",
+    "        else:\n",
+    "            thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
     "\n",
     "        # Find the MP4 file in the RGB directory\n",
     "        rgb_video_files = list(rgb_dir.glob(\"*.MP4\")) + list(rgb_dir.glob(\"*.mp4\"))\n",
@@ -1265,7 +1279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "collab-env",
    "language": "python",
    "name": "python3"
   },
@@ -1279,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
