--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -499,7 +499,7 @@
     "\n",
     "        # Dynamically find the RGB and thermal MP4 files\n",
     "        rgb_dir = LOCAL_DOWNLOAD_DIR / f\"rgb_{camera}\"\n",
-    "        if skip_thermal_extraction == True:\n",
+    "        if skip_thermal_extraction:\n",
     "            thermal_dir = LOCAL_DOWNLOAD_DIR / f\"thermal_{camera}\"\n",
     "        else:\n",
     "            thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
@@ -587,7 +587,7 @@
     "\n",
     "        # Dynamically find the RGB and thermal MP4 files\n",
     "        rgb_dir = LOCAL_DOWNLOAD_DIR / f\"rgb_{camera}\"\n",
-    "        if skip_thermal_extraction == True:\n",
+    "        if skip_thermal_extraction:\n",
     "            thermal_dir = LOCAL_DOWNLOAD_DIR / f\"thermal_{camera}\"\n",
     "        else:\n",
     "            thermal_dir = LOCAL_PROCESSED_DIR / f\"thermal_{camera}\"\n",
@@ -1279,7 +1279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab-env",
+   "display_name": ".venv-310",
    "language": "python",
    "name": "python3"
   },
@@ -1293,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
