disabled notebook test for tracking pipeline as this created too many CI problems; extracted into a regular test.

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -543,7 +543,7 @@
     "            output_dir_rgb,\n",
     "            output_dir_thm,\n",
     "            frame_size=(640, 480),\n",
-    "            max_frames=1000,\n",
+    "            max_frames=max_frames,\n",
     "            warp_to=\"thermal\",\n",
     "            rotation_angle=rotation_angle,\n",
     "            skip_homography=False,\n",
