--- a/docs/gnn/0c-Simulate_Boid_wFood_2D.ipynb
+++ b/docs/gnn/0c-Simulate_Boid_wFood_2D.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "78697ce6-038d-4649-a23a-b08a476e07e4",
    "metadata": {
     "scrolled": true
@@ -341,7 +341,7 @@
    "outputs": [],
    "source": [
     "file_name = \"boid_food_basic_independent.pt\"\n",
-    "if save_file:\n",
+    "if save_file and not smoke_test:\n",
     "    ani.save(f\"boid_food_basic_alignment{file_id}.gif\", writer=\"pillow\", fps=20)"
    ]
   },
